// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`get approval message Approval needed request for platform 1`] = `
Array [
  Object {
    "text": Object {
      "text": "*Approval Requested from <drewsue>*",
      "type": "mrkdwn",
    },
    "type": "section",
  },
  Object {
    "elements": Array [
      Object {
        "text": ":git: \`test-repo\` @ \`v42.0.0\`  | :technologist: drewsue",
        "type": "mrkdwn",
      },
    ],
    "type": "context",
  },
  Object {
    "elements": Array [
      Object {
        "text": Object {
          "emoji": true,
          "text": "Open Action :github:",
          "type": "plain_text",
        },
        "type": "button",
        "url": "http://test-repo.com/action",
      },
    ],
    "type": "actions",
  },
  Object {
    "type": "divider",
  },
]
`;

exports[`get approval message Approval needed request for product 1`] = `
Array [
  Object {
    "text": Object {
      "text": "*Approval Requested from <drewsue>*",
      "type": "mrkdwn",
    },
    "type": "section",
  },
  Object {
    "elements": Array [
      Object {
        "text": ":git: \`test-repo\` @ \`v42.0.0\`  | :technologist: drewsue",
        "type": "mrkdwn",
      },
    ],
    "type": "context",
  },
  Object {
    "elements": Array [
      Object {
        "text": Object {
          "emoji": true,
          "text": "Open Action :github:",
          "type": "plain_text",
        },
        "type": "button",
        "url": "http://test-repo.com/action",
      },
    ],
    "type": "actions",
  },
  Object {
    "type": "divider",
  },
]
`;

exports[`get approval message Updated approval message after it has been approved 1`] = `
Array [
  Object {
    "text": Object {
      "text": ":approved: ~*Approval Requested from <drewsue>*~",
      "type": "mrkdwn",
    },
    "type": "section",
  },
  Object {
    "elements": Array [
      Object {
        "text": "~:git: \`test-repo\` @ \`v42.0.0\`  | :technologist: drewsue~",
        "type": "mrkdwn",
      },
    ],
    "type": "context",
  },
  Object {
    "elements": Array [
      Object {
        "text": Object {
          "emoji": true,
          "text": "Open Deploy :slack:",
          "type": "plain_text",
        },
        "type": "button",
        "url": "https://basistheory.slack.com/archives/C1234567890/1234567890.123456",
      },
    ],
    "type": "actions",
  },
  Object {
    "type": "divider",
  },
]
`;

exports[`get deploy message Deploying started message 1`] = `
Array [
  Object {
    "text": Object {
      "text": "Deploying",
      "type": "plain_text",
    },
    "type": "header",
  },
  Object {
    "elements": Array [
      Object {
        "text": ":git: \`test-repo\` @ \`v42.0.0\`  | :technologist: drewsue",
        "type": "mrkdwn",
      },
    ],
    "type": "context",
  },
  Object {
    "elements": Array [
      Object {
        "text": "Deploy started \`2021-01-01T00:00:00Z\` ",
        "type": "mrkdwn",
      },
    ],
    "type": "context",
  },
  Object {
    "elements": Array [
      Object {
        "text": Object {
          "emoji": true,
          "text": "Open Action  :github:",
          "type": "plain_text",
        },
        "type": "button",
        "url": "http://test-repo.com/action",
      },
    ],
    "type": "actions",
  },
  Object {
    "type": "divider",
  },
]
`;

exports[`get deploy message Updated message when deploy is done 1`] = `
Array [
  Object {
    "text": Object {
      "text": "Deploying",
      "type": "plain_text",
    },
    "type": "header",
  },
  Object {
    "elements": Array [
      Object {
        "text": ":git: \`test-repo\` @ \`v42.0.0\`  | :technologist: drewsue",
        "type": "mrkdwn",
      },
    ],
    "type": "context",
  },
  Object {
    "elements": Array [
      Object {
        "text": "Deploy started \`2021-01-01T00:00:00Z\` and finished \`2021-01-01T00:00:00Z\`",
        "type": "mrkdwn",
      },
    ],
    "type": "context",
  },
  Object {
    "elements": Array [
      Object {
        "text": Object {
          "emoji": true,
          "text": "Open Action  :github:",
          "type": "plain_text",
        },
        "type": "button",
        "url": "http://test-repo.com/action",
      },
    ],
    "type": "actions",
  },
  Object {
    "type": "divider",
  },
]
`;

exports[`release notes Correctly formed will return each as its own block and no urls 1`] = `
Array [
  Object {
    "text": Object {
      "text": " :loud_sound: *Release Notes* :loud_sound:",
      "type": "mrkdwn",
    },
    "type": "section",
  },
  Object {
    "text": Object {
      "text": "• chore(deps): Upgrades dependencies by @dhudec",
      "type": "mrkdwn",
    },
    "type": "section",
  },
  Object {
    "text": Object {
      "text": "• supporting sessions in proxy by @jleon15",
      "type": "mrkdwn",
    },
    "type": "section",
  },
]
`;

exports[`release notes Malformed changelog will just return the note 1`] = `
Array [
  Object {
    "text": Object {
      "text": " :loud_sound: *Release Notes* :loud_sound:",
      "type": "mrkdwn",
    },
    "type": "section",
  },
  Object {
    "text": Object {
      "text": "• stuff",
      "type": "mrkdwn",
    },
    "type": "section",
  },
]
`;

exports[`release notes No bullets anywhere will just return the note 1`] = `
Array [
  Object {
    "text": Object {
      "text": " :loud_sound: *Release Notes* :loud_sound:",
      "type": "mrkdwn",
    },
    "type": "section",
  },
  Object {
    "text": Object {
      "text": "• no bullets 
 any 
 where",
      "type": "mrkdwn",
    },
    "type": "section",
  },
]
`;

exports[`release notes Nothing will return nothing 1`] = `Array []`;
